--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -765,9 +765,23 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
+                                            <div><b class="instructionListHeader">Thecus Armv7</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-thecus_{version}_arm_32.mod" href="emby-server-thecus_{version}_arm_32.mod">{filename}</a></li>
+                                                <li>Start Emby server</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
                                             <div><b class="instructionListHeader">Thecus X64 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-thecus_{version}_x86_64.mod" href="emby-server-thecus_{version}_x86_64.mod">{filename}</a></li>
+                                                <li>Start Emby server</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Thecus Armv7 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-thecus_{version}_arm_32.mod" href="emby-server-thecus_{version}_arm_32.mod">{filename}</a></li>
                                                 <li>Start Emby server</li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
