--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -639,6 +639,49 @@
 
                                             <!-- synology-support-content : BEGIN -->
 
+                                            <div><b class="instructionListHeader">Synology X64</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_x86_64.spk" href="emby-server-synology_{version}_x86_64.spk">{filename}</a></li>
+                                                <li>– Install using the Synology web interface.</li>
+                                                <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Synology Armv8</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv8.spk" href="emby-server-synology_{version}_armv8.spk">{filename}</a></li>
+                                                <li>– Install using the Synology web interface.</li>
+                                                <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Synology Armv7</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">{filename}</a></li>
+                                                <li>– Install using the Synology web interface.</li>
+                                                <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Synology X64 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_x86_64.spk" href="emby-server-synology_{version}_x86_64.spk">{filename}</a></li>
+                                                <li>– Install using the Synology web interface.</li>
+                                                <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Synology Armv8 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv8.spk" href="emby-server-synology_{version}_armv8.spk">{filename}</a></li>
+                                                <li>– Install using the Synology web interface.</li>
+                                                <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Synology Armv7 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">{filename}</a></li>
+                                                <li>– Install using the Synology web interface.</li>
+                                                <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Synology Armv5 / X86</b></div>
                                             <p style="font-weight: bold;margin-bottom: 8px;">Introduction</p>
 
                                             <p style="margin-bottom: 0px;">An Emby supported package is now available for all Synology* (and XPEnology) platforms!</p>
