--- a/src/flatpak-server.html
+++ b/src/flatpak-server.html
@@ -414,7 +414,7 @@
                                         <ol class="instructionList">
                                             <li>Download <a class="lnkPackageDownload" data-level="release" data-filename="emby-server-flatpak_{version}_x86_64.flatpak" href="https://github.com/MediaBrowser/Emby.Releases/releases/download/4.4.3.0/emby-server-flatpak_4.4.3.0_x86_64.flatpak">Emby Server for Flatpak</a>.</li>
                                             <li><code style="white-space:nowrap;">flatpak install org.freedesktop.Platform/x86_64/18.08</code></li>
-                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_x86_64.rpm">flatpak install {filename}</code></li>
+                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-flatpak_{version}_x86_64.flatpak">flatpak install {filename}</code></li>
                                             <li>Open a web browser to http://localhost:8096</li>
                                         </ol>
 
@@ -422,7 +422,7 @@
                                         <ol class="instructionList">
                                             <li>Download <a class="lnkPackageDownload" data-level="release" data-filename="emby-server-flatpak_{version}_aarch64.flatpak" href="https://github.com/MediaBrowser/Emby.Releases/releases/download/4.4.3.0/emby-server-flatpak_4.4.3.0_aarch64.flatpak">Emby Server for Flatpak</a>.</li>
                                             <li><code style="white-space:nowrap;">flatpak install org.freedesktop.Platform/aarch64/18.08</code></li>
-                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_aarch64.rpm">flatpak install {filename}</code></li>
+                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-flatpak_{version}_aarch64.flatpak">flatpak install {filename}</code></li>
                                             <li>Open a web browser to http://localhost:8096</li>
                                         </ol>
 
@@ -430,7 +430,7 @@
                                         <ol class="instructionList">
                                             <li>Download <a class="lnkPackageDownload" data-level="release" data-filename="emby-server-flatpak_{version}_arm.flatpak" href="https://github.com/MediaBrowser/Emby.Releases/releases/download/4.4.3.0/emby-server-flatpak_4.4.3.0_arm.flatpak">Emby Server for Flatpak</a>.</li>
                                             <li><code style="white-space:nowrap;">flatpak install org.freedesktop.Platform/arm/18.08</code></li>
-                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_arm.rpm">flatpak install {filename}</code></li>
+                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-flatpak_{version}_arm.flatpak">flatpak install {filename}</code></li>
                                             <li>Open a web browser to http://localhost:8096</li>
                                         </ol>
                                     </div>
