--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -660,6 +660,14 @@
                                                 <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
                                             </ol>
 
+                                            <div><b class="instructionListHeader">Synology Armv5</b></div>
+                                            <ol class="instructionList">
+                                                <li>Install the mono package from SynoCommunity</li>
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">{filename}</a></li>
+                                                <li>– Install using the Synology web interface.</li>
+                                                <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
+                                            </ol>
+
                                             <div><b class="instructionListHeader">Synology X64 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_x86_64.spk" href="emby-server-synology_{version}_x86_64.spk">{filename}</a></li>
@@ -681,79 +689,13 @@
                                                 <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Synology Armv5 / X86</b></div>
-                                            <p style="font-weight: bold;margin-bottom: 8px;">Introduction</p>
-
-                                            <p style="margin-bottom: 0px;">An Emby supported package is now available for all Synology* (and XPEnology) platforms!</p>
-
-                                            <p style="margin-bottom: 0px;">The package is supported on systems running DSM 5.2-5967 or later.</p>
-
-                                            <p style="margin-bottom: 4px;font-size: 12px;font-style: italic;">* Support for QorIQ based machines (DS213+, DS413) is not currently possible.</p>
-
-                                            <p style="font-weight: bold;margin-bottom: 8px;">Setup</p>
-
-                                            <p style="margin-bottom: 8px;"> There are a few things you need to do to get started, but it's pretty quick and easy to get going:-</p>
-
-                                            <div style="margin-left: 16px; margin-bottom: 16px;">
-
-                                                <p style="margin-bottom: 8px;"><span style="font-weight: bold;">1)</span> The first thing you need to do is add the Emby repository to Package Center's settings.</p>
-
-                                                <p style="margin-bottom: 8px;">Package Center -> Settings -> Package Sources</p>
-
-                                                <img style="width: 701px;" src="resources/Synology-Setup-Step-1.png" />
-
-                                                <p style="margin-bottom: 8px;"><span style="font-weight: bold;">*</span> <span style="font-style: italic;">XPEnology users, please use https://synology.emby.media/?package_repository=360efc6e-de72-4073-b603-2bfbd7001586 and make sure you take a look at the <a href="community/index.php?/topic/40411-xpenology-users-read-me/" target="_blank">XPEnology Users Read Me</a>.</span></p>
-
-                                            </div>
-
-                                            <div style="margin-left: 16px; margin-bottom: 16px;">
-
-                                                <p style="margin-bottom: 8px;"><span style="font-weight: bold;">2)</span> Now configure Package Center to trust the Emby package repository.</p>
-
-                                                <p style="margin-bottom: 8px;">Package Center -> Settings -> General</p>
-
-                                                <img style="width: 701px;" src="resources/Synology-Setup-Step-2.png" />
-
-                                            </div>
-
-                                            <div style="margin-left: 16px; margin-bottom: 16px;">
-
-                                                <p style="margin-bottom: 8px;"><span style="font-weight: bold;">3)</span> We can now explore Package Center and locate the package to install it.</p>
-
-                                                <p style="margin-bottom: 8px;">Package Center -> Explore -> Community</p>
-
-                                                <img style="width: 701px;" src="resources/Synology-Setup-Step-3.png" />
-
-                                            </div>
-
-                                            <div style="margin-left: 16px; margin-bottom: 16px;">
-
-                                                <p style="margin-bottom: 8px;"><span style="font-weight: bold;">4)</span> Once you've clicked install, it will take a few minutes for the package to become available.</p>
-
-                                                <img style="width: 701px;" src="resources/Synology-Setup-Step-4.png" />
-
-                                            </div>
-
-                                            <div style="margin-left: 16px; margin-bottom: 16px;">
-
-                                                <p style="margin-bottom: 8px;"><span style="font-weight: bold;">5)</span> When the install completes, Emby will be running and you can get started by clicking on the URL!</p>
-
-                                                <img style="width: 701px;" src="resources/Synology-Setup-Step-5.png" />
-
-                                            </div>
-
-                                            <p style="font-weight: bold;margin-bottom: 8px;">Next Steps</p>
-
-                                            <ul>
-
-                                                <li>Read our <a href="https://github.com/MediaBrowser/Wiki/wiki/Synology-:-Setting-Up-Your-Media-Library-Share" target="_blank">guide</a> on how to set up your media library share. <span style="color: #d93a32; font-style: italic; font-weight: bold;">RECOMMENDED!</span></li>
-
-                                                <li>Have a look through the Synology specific content on the <a href="https://github.com/MediaBrowser/Wiki/wiki/Synology-:-Help-and-Support" target="_blank">Wiki</a>.</li>
-
-                                            </ul>
-
-                                            <!-- synology-support-content : END -->
-
+                                            <div><b class="instructionListHeader">Synology Armv5 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Install the mono package from SynoCommunity</li>
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">{filename}</a></li>
+                                                <li>– Install using the Synology web interface.</li>
+                                                <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
+                                            </ol>
                                         </div>
 
                                         <div class="installPlatform hide terramaster">
