--- a/src/emby-for-ios.html
+++ b/src/emby-for-ios.html
@@ -284,9 +284,6 @@
     <script type="text/javascript" src="resources/jquery.themepunch.revolution.min.js"></script>
     <script type="text/javascript" src="resources/ultimate-params.min.js"></script>
 
-
-    <link rel="prev" title="Emby for Chromecast" href="emby-for-chromecast.html">
-    <link rel="next" title="Emby for Amazon Fire TV" href="emby-for-fire-tv.html">
     <!--[if IE 8]><link rel="stylesheet" type="text/css" href="resources/vc-ie8.css" media="screen"><![endif]-->
     <link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png">
@@ -411,12 +408,7 @@
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
                         <h1>Emby for iOS</h1>
-                        <p>Available for iPad and iPhone</p>								<div class="w-pagehead-nav">
-                            <div class="w-pagehead-nav-h">
-                                <a class="w-pagehead-nav-item type_prev" href="emby-for-fire-tv.html" title="Emby for Amazon Fire TV"><i class="mdfi_navigation_chevron_left"></i></a>
-                                <a class="w-pagehead-nav-item type_next" href="emby-for-chromecast.html" title="Emby for Chromecast"><i class="mdfi_navigation_chevron_right"></i></a>
-                            </div>
-                        </div>
+                        <p>Available for iPad and iPhone</p>
                     </div>
                 </div>
             </div>
