--- a/src/emby-theater.html
+++ b/src/emby-theater.html
@@ -284,9 +284,6 @@
     <script type="text/javascript" src="resources/jquery.themepunch.revolution.min.js"></script>
     <script type="text/javascript" src="resources/ultimate-params.min.js"></script>
 
-
-    <link rel="prev" title="Emby Server for Mac" href="mac-server.html">
-    <link rel="next" title="Emby Server for NAS" href="nas-server.html">
     <!--[if IE 8]><link rel="stylesheet" type="text/css" href="resources/vc-ie8.css" media="screen"><![endif]-->
     <link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png">
@@ -410,13 +407,7 @@
             <div class="l-submain for_pagehead color_alternate size_large" style="padding-top: 140px;">
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
-                        <h1>Emby Theater</h1>
-                        <p>for Windows 7, 8, 10 and Vista</p>								<div class="w-pagehead-nav">
-                            <div class="w-pagehead-nav-h">
-                                <a class="w-pagehead-nav-item type_prev" href="nas-server.html" title="Emby Server for NAS"><i class="mdfi_navigation_chevron_left"></i></a>
-                                <a class="w-pagehead-nav-item type_next" href="mac-server.html" title="Emby Server for Mac"><i class="mdfi_navigation_chevron_right"></i></a>
-                            </div>
-                        </div>
+                        <h1>Emby Theater for Windows</h1>
                     </div>
                 </div>
             </div>
