--- a/src/emby-web-client.html
+++ b/src/emby-web-client.html
@@ -285,7 +285,6 @@
     <script type="text/javascript" src="resources/jquery.themepunch.revolution.min.js"></script>
     <script type="text/javascript" src="resources/ultimate-params.min.js"></script>
 
-    <link rel="prev" title="Emby for Android TV" href="emby-for-android-tv.html">
     <!--[if IE 8]><link rel="stylesheet" type="text/css" href="resources/vc-ie8.css" media="screen"><![endif]-->
     <link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png">
@@ -402,12 +401,7 @@
             <div class="l-submain for_pagehead color_alternate size_large" style="padding-top: 140px;">
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
-                        <h1>Emby Web Client</h1>
-                        <p>Your portable media manager</p>								<div class="w-pagehead-nav">
-                            <div class="w-pagehead-nav-h">
-                                <a class="w-pagehead-nav-item type_next" href="emby-for-android-tv.html" title="Emby for Android TV"><i class="mdfi_navigation_chevron_right"></i></a>
-                            </div>
-                        </div>
+                        <h1>Emby Web App</h1>
                     </div>
                 </div>
             </div>
