--- a/src/emby-for-xbox-360.html
+++ b/src/emby-for-xbox-360.html
@@ -284,9 +284,6 @@
     <script type="text/javascript" src="resources/jquery.themepunch.revolution.min.js"></script>
     <script type="text/javascript" src="resources/ultimate-params.min.js"></script>
 
-
-    <link rel="prev" title="Emby Server for NAS" href="nas-server.html">
-    <link rel="next" title="Emby Server for Linux" href="linux-server.html">
     <!--[if IE 8]><link rel="stylesheet" type="text/css" href="resources/vc-ie8.css" media="screen"><![endif]-->
     <link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png">
@@ -411,12 +408,7 @@
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
                         <h1>Emby for Xbox 360</h1>
-                        <p>And other Media Center Extenders</p>								<div class="w-pagehead-nav">
-                            <div class="w-pagehead-nav-h">
-                                <a class="w-pagehead-nav-item type_prev" href="linux-server.html" title="Emby Server for Linux"><i class="mdfi_navigation_chevron_left"></i></a>
-                                <a class="w-pagehead-nav-item type_next" href="nas-server.html" title="Emby Server for NAS"><i class="mdfi_navigation_chevron_right"></i></a>
-                            </div>
-                        </div>
+                        <p>And other Media Center Extenders</p>								
                     </div>
                 </div>
             </div>
