--- a/src/download.html
+++ b/src/download.html
@@ -450,10 +450,10 @@
                                                 <li><a href="nas-server.html" title="Emby Server for Open Media Vault">Open Media Vault</a></li>
                                                 <li><a href="nas-server.html" title="Emby Server for QNAP">QNAP</a></li>
                                                 <li><a href="nas-server.html" title="Emby Server for Synology">Synology</a></li>
-                                                <li><a href="nas-server.html" title="Emby Server for TerraMaster">TerraMaster</a></li>
-                                                <li><a href="nas-server.html" title="Emby Server for Thecus">Thecus</a></li>
+                                                <li><a href="terramaster-server.html" title="Emby Server for TerraMaster">TerraMaster</a></li>
+                                                <li><a href="thecus-server.html" title="Emby Server for Thecus">Thecus</a></li>
                                                 <li><a href="docker-server.html" title="Emby Server for unRAID">unRAID</a></li>
-                                                <li><a href="nas-server.html" title="Emby Server for Western Digital">Western Digital</a></li>
+                                                <li><a href="western-digital-server.html" title="Emby Server for Western Digital">Western Digital</a></li>
                                             </ul>
                                         </div>
                                         <div style="margin: 1.25em auto;font-size:108%;">
