--- a/src/download.html
+++ b/src/download.html
@@ -447,7 +447,7 @@
                                                 <li><a href="asustor-server.html" title="Emby Server for ASUSTOR">ASUSTOR</a></li>
                                                 <li><a href="freenas-server.html" title="Emby Server for FreeNAS">FreeNAS</a></li>
                                                 <li><a href="netgear-server.html" title="Emby Server for Netgear">Netgear</a></li>
-                                                <li><a href="nas-server.html" title="Emby Server for Open Media Vault">Open Media Vault</a></li>
+                                                <li><a href="open-media-vault-server.html" title="Emby Server for Open Media Vault">Open Media Vault</a></li>
                                                 <li><a href="qnap-server.html" title="Emby Server for QNAP">QNAP</a></li>
                                                 <li><a href="nas-server.html" title="Emby Server for Synology">Synology</a></li>
                                                 <li><a href="terramaster-server.html" title="Emby Server for TerraMaster">TerraMaster</a></li>
