--- a/src/asustor-server.html
+++ b/src/asustor-server.html
@@ -444,37 +444,29 @@
                                         Emby Server can be installed from either <a target="_blank" href="https://www.asustor.com/en/app_central/app_detail?id=749&type=&model=">Asustor App Central</a>, or by manually installing the packages provided here. The version in Asustor App Central may sometimes be a little behind the latest due to the Asustor review process.
                                     </p>
 
-                                    <div><b class="instructionListHeader">Asustor X64</b></div>
+                                    <p><b>Emby Server for Asustor Manual Installation</b></p>
+
                                     <ol class="instructionList">
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-asustor_{version}_x86-64.apk" href="emby-server-asustor_{version}_x86-64.apk">{filename}</a></li>
-                                        <li>To copy the file to your Asustor, Open App Central -> Go to Manual Install -> Click Browse -> Select the package -> Click Upload.</li>
+                                        <li>
+                                            <div>Download and install one of the following packages depending on your Asustor NAS model:</div>
+                                            <ul>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-asustor_{version}_x86-64.apk" href="emby-server-asustor_{version}_arm64.apk">64-bit</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-asustor_{version}_arm64.apk" href="emby-server-asustor_{version}_arm64.apk">ARMv8</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-asustor_{version}_arm.apk" href="emby-server-asustor_{version}_arm.apk">ARMv7</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>Open App Central -> Go to Manual Install -> Click Browse -> Select the package -> Click Upload.</li>
                                         <li>Start Emby server from the ASUSTOR web page</li>
                                         <li>Open a web browser to http://localhost:8096</li>
                                     </ol>
 
-                                    <div><b class="instructionListHeader">Asustor Arm64 (aarch64)</b></div>
-                                    <ol class="instructionList">
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-asustor_{version}_arm64.apk" href="emby-server-asustor_{version}_arm64.apk">{filename}</a></li>
-                                        <li>To copy the file to your Asustor, Open App Central -> Go to Manual Install -> Click Browse -> Select the package -> Click Upload.</li>
-                                        <li>Start Emby server from the ASUSTOR web page</li>
-                                        <li>Open a web browser to http://localhost:8096</li>
-                                    </ol>
-
-                                    <div><b class="instructionListHeader">Asustor X64 - BETA</b></div>
-                                    <ol class="instructionList">
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-asustor_{version}_x86-64.apk" href="emby-server-asustor_{version}_x86-64.apk">{filename}</a></li>
-                                        <li>To copy the file to your Asustor, Open App Central -> Go to Manual Install -> Click Browse -> Select the package -> Click Upload.</li>
-                                        <li>Start Emby server from the ASUSTOR web page</li>
-                                        <li>Open a web browser to http://localhost:8096</li>
-                                    </ol>
-
-                                    <div><b class="instructionListHeader">Asustor Arm64 (aarch64) - BETA</b></div>
-                                    <ol class="instructionList">
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-asustor_{version}_arm64.apk" href="emby-server-asustor_{version}_arm64.apk">{filename}</a></li>
-                                        <li>To copy the file to your Asustor, Open App Central -> Go to Manual Install -> Click Browse -> Select the package -> Click Upload.</li>
-                                        <li>Start Emby server from the ASUSTOR web page</li>
-                                        <li>Open a web browser to http://localhost:8096</li>
-                                    </ol>
+                                    <p><b>Emby Server (BETA) for Asustor Manual Installation</b></p>
+                                    <p>To participate in Emby Server beta testing, download one of the following packages depending on your Asustor NAS model:</p>
+                                    <ul>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-asustor_{version}_x86-64.apk" href="emby-server-asustor_{version}_arm64.apk">64-bit</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-asustor_{version}_arm64.apk" href="emby-server-asustor_{version}_arm64.apk">ARMv8</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-asustor_{version}_arm.apk" href="emby-server-asustor_{version}_arm.apk">ARMv7</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
