--- a/src/netgear-server.html
+++ b/src/netgear-server.html
@@ -444,21 +444,26 @@
                                         Emby Server can be installed from either the NetGear ReadyNAS app store, or by manually installing the packages provided here. The version in the ReadyNAS app store may sometimes be a little behind the latest due to the NetGear review process.
                                     </p>
 
-                                    <div><b class="instructionListHeader">ReadyNAS X64</b></div>
+                                    <p><b>Emby Server for Netgear Manual Installation</b></p>
+
                                     <ol class="instructionList">
-                                        <li>Ensure you're running ReadyNAS 6.8.0 or greater. If version 6.8.0 is not detected by "check for updates", it can be downloaded and installed via the admin interface.</li>
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-netgear_{version}_amd64.deb" href="emby-server-netgear_{version}_amd64.deb">{filename}</a></li>
-                                        <li>– Upload the deb for your architecture via the apps tab in the admin interface. A popup should appear to keep you updated on the installation progress.</li>
-                                        <li>– When the installation is over, you should see Emby appear in the apps tabs on the admin interface, you can turn it on if it's not already and the launch button will take you to the install wizard.</li>
+                                        <li>
+                                            <div>Download and install one of the following packages depending on your Netgear NAS model:</div>
+                                            <ul>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-netgear_{version}_amd64.deb" href="emby-server-netgear_{version}_amd64.deb">64-bit</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-netgear_{version}_armhf.deb" href="emby-server-netgear_{version}_armhf.deb">ARMv7</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>Upload the deb for your architecture via the apps tab in the Netgear admin interface. A popup should appear to keep you updated on the installation progress.</li>
+                                        <li>When the installation is over, you should see Emby appear in the apps tabs on the admin interface, you can turn it on if it's not already and the launch button will take you to the install wizard.</li>
                                     </ol>
 
-                                    <div><b class="instructionListHeader">ReadyNAS X64 - BETA</b></div>
-                                    <ol class="instructionList">
-                                        <li>Ensure you're running ReadyNAS 6.8.0 or greater. If version 6.8.0 is not detected by "check for updates", it can be downloaded and installed via the admin interface.</li>
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-netgear_{version}_amd64.deb" href="emby-server-netgear_{version}_amd64.deb">{filename}</a></li>
-                                        <li>– Upload the deb for your architecture via the apps tab in the admin interface. A popup should appear to keep you updated on the installation progress.</li>
-                                        <li>– When the installation is over, you should see Emby appear in the apps tabs on the admin interface, you can turn it on if it's not already and the launch button will take you to the install wizard.</li>
-                                    </ol>
+                                    <p><b>Emby Server (BETA) for Netgear Manual Installation</b></p>
+                                    <p>To participate in Emby Server beta testing, download one of the following packages depending on your Netgear NAS model:</p>
+                                    <ul>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-netgear_{version}_amd64.deb" href="emby-server-netgear_{version}_amd64.deb">64-bit</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-netgear_{version}_armhf.deb" href="emby-server-netgear_{version}_armhf.deb">ARMv7</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
